--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
+    "css-loader": "^3.6.0",
+    "element-ui": "^2.15.8",
     "jquery": "^3.6.0",
+    "particles.js": "^2.0.0",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass-loader": "^4.1.1",
+    "screenfull": "^5.2.0",
     "vue": "^2.5.2",
+    "vue-functional-data-merge": "^3.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -21,6 +29,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
@@ -29,13 +38,17 @@
     "bootstrap": "^5.1.3",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^3.3.0",
     "d3": "^5.16.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.6.0",
+    "less": "^4.1.2",
+    "less-loader": "^11.0.0",
     "node-notifier": "^5.1.2",
+    "node-sass": "^7.0.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -43,8 +56,12 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^3.3.1",
+    "stylus-loader": "^7.0.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
